--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap');
 
 *{
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -13,7 +13,7 @@ body{
     align-items: center;
     width: 100%;
     height: 100vh;
-    background-color: #243757;
+    background-color: #3a5f6f;
 }
 
 #container{
@@ -32,7 +32,7 @@ body{
     flex-direction: column;
     gap: 1.1rem;
     padding: 2rem;
-    background-color: #3a5f6f;
+    background-color: #243757;
     border-radius: 8px;
     box-shadow: 5px 5px 15px black;
 }
